added set gender request