@@ -2,6 +2,9 @@ plugins {
     id 'java-library'
 }
 
+sourceCompatibility = JavaVersion.VERSION_19
+targetCompatibility = JavaVersion.VERSION_19
+
 sourceSets {
     integrationTest {
         compileClasspath += sourceSets.main.output
@@ -52,3 +55,10 @@ tasks.register('integrationTest', Test) {
 
 check.dependsOn integrationTest
 
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
